encrypted emulated multicluster
Signed-off-by: Raffaele Spazzoli <raffaele.spazzoli@gmail.com>

--- a/cockroachdb-prep/templates/certificate.yaml
+++ b/cockroachdb-prep/templates/certificate.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   # Secret names are always required.
   secretName: {{ template "cockroachdb-prep.fullname" . }}-tls
-  commonName: {{ template "cockroachdb-prep.fullname" . }}
+  commonName: node
   usages:
     - server auth
     - client auth  
