--- a/cockroachdb/templates/statefulset.yaml
+++ b/cockroachdb/templates/statefulset.yaml
@@ -138,6 +138,39 @@ spec:
       # needed for graceful shutdown of a node.
       terminationGracePeriodSeconds: 60
       containers:
+        {{- if .Values.tls.enabled }}
+        {{- if .Values.tls.certs.provided }}
+        {{- if .Values.tls.certs.tlsSecret }}        
+        - name: certs-reloader
+          image: ubi8:latest
+          command:
+            - /usr/bin/bash
+          args:
+            - -c
+            - /script/certs-reload.sh
+          env:
+            - name: CERT
+              value: /certs/tls.crt
+            - name: DST_CERT
+              value: /crdb-certs/node.crt              
+            - name: KEY 
+              value: /certs/tls.key
+            - name: DST_KEY 
+              value: /crdb-certs/node.key              
+            - name: CA
+              value: /certs/ca.crt
+            - name: DST_CA
+              value: /crdb-certs/ca.crt              
+          volumeMounts:
+          - name: cert-reload-config
+            mountPath: /script
+          - name: certs-tls
+            mountPath: /certs
+          - name: certs
+            mountPath: /crdb-certs
+{{- end }}
+{{- end }}
+{{- end }}            
         - name: db
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
@@ -269,24 +302,21 @@ spec:
           emptyDir: {}
         {{- end }}
       {{- if .Values.tls.enabled }}
+      {{- if .Values.tls.certs.provided }}
+      {{- if .Values.tls.certs.tlsSecret }}
+        - name: certs-tls
+          secret:
+            secretName: {{ template "cockroachdb.fullname" . }}-tls
+        - name: cert-reload-config
+          configMap:
+            name: {{ template "cockroachdb.fullname" . }}-certs-reload
+            defaultMode: 0770          
+      {{- end }}
+      {{- end }}      
         - name: certs
           {{- if .Values.tls.certs.provided }}
           {{- if .Values.tls.certs.tlsSecret }}
-          projected:
-            sources:
-            - secret:
-                name: {{ .Values.tls.certs.nodeSecret }}
-                items:
-                - key: ca.crt
-                  path: ca.crt
-                  mode: 0400
-                - key: tls.crt
-                  path: node.crt
-                  mode: 0400
-                - key: tls.key
-                  path: node.key
-                  mode: 0400
-            defaultMode: 0400      
+          emptyDir: {}      
           {{- else }}
           secret:
             secretName: {{ .Values.tls.certs.nodeSecret }}
