--- a/single-cluster-values.yaml
+++ b/single-cluster-values.yaml
@@ -13,7 +13,7 @@ podAffinity:
         topologyKey: failure-domain.beta.kubernetes.io/zone
 
 tls:
-  enabled: no
+  enabled: yes
   certs:
     provided: yes
     tlsSecret: yes
